--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.2.2"
+    "vue": "^2.2.2",
+    "vue-resource": "^1.2.1"
   },
   "devDependencies": {
+
+    "glob": "^7.1.1",
+    "fs-extra": "^2.1.2",
+
     "autoprefixer": "^6.7.2",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
