--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 
     "glob": "^7.1.1",
     "fs-extra": "^2.1.2",
+    "clean-webpack-plugin": "^0.1.16",
 
     "autoprefixer": "^6.7.2",
     "babel-core": "^6.22.1",
