--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "vue": "^2.2.2",
-    "vue-resource": "^1.2.1"
+    "vue-resource": "^1.2.1",
+    "we-vue": "^1.0.19"
   },
   "devDependencies": {
 
