--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.2.2",
-    "vue-resource": "^1.2.1",
-    "element-ui": "^1.2.8"
+    "vue": "latest",
+    "vue-resource": "latest",
+    "element-ui": "latest"
   },
   "devDependencies": {
 
