--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "fs-extra": "^2.1.2",
     "clean-webpack-plugin": "^0.1.16",
 
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1",
+    "sass-loader": "^6.0.6",
+    "node-sass": "^4.5.3",
 
     "autoprefixer": "^6.7.2",
     "babel-core": "^6.22.1",
